--- a/index.html
+++ b/index.html
@@ -8,10 +8,84 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Latitude vs X</title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Latitude</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
+                  Plots
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Max Temperature</a>
+                  <a class="dropdown-item" href="#">Humidity</a>
+                  <a class="dropdown-item" href="#">Cloudiness</a>
+                  <a class="dropdown-item" href="#">Wind speed</a>
+                </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Comparison</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Data</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-8">
+            <h1> Summary: Latitude vs. X</h1>
+            <p>
+                The purpose of this project was to analyse weather trends based on a location's distance from the
+                equator. I used the OpenWeatherMap API to assemble a weather dataset for over 500 cities across 
+                the globe. 
+            </p>
+            <p>
+                Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
+                cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
+                the plots created, and explanations of trends and correlations observed.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <h1>Visualizations</h1>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">
+                    <a href="assets/cloudiness.png">
+                        <img src="assets/cloudiness.png" alt="cloudymap">
+                    </a>
+                </li>
+                 
+                <li class="list-group-item"> 
+                    <a href="assets/humidity.png">
+                        <img src="assets/humidity.png" alt="humiditymap">
+                    </a> 
+                </li>
+              </ul>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">
+                    <a href="assets/max_temp.png">
+                        <img src="assets/max_temp.png" alt="max_tempmap">
+                    </a>
+                </li>
+                
+                <li class="list-group-item"> 
+                    <a href="assets/wind_speed.png">
+                        <img src="assets/wind_speed.png" alt="wind_speed_map"> 
+                    </a>
+                </li>
+              </ul>           
+          </div>
+        </div>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
