--- a/index.html
+++ b/index.html
@@ -55,53 +55,29 @@
                 the plots created, and explanations of trends and correlations observed.
             </p>
           </div>
-          <div class="col-sm-4 max-width: 100%">
-            <h2>Visualizations</h2>
-            <!-- <a href="assets/cloudiness.png">
-                <img src="assets/cloudiness.png" alt="cloudymap">
-            </a>
-            <a href="assets/humidity.png">
-                <img src="assets/humidity.png" alt="humiditymap">
-            </a> 
-            <a href="assets/max_temp.png">
-                <img src="assets/max_temp.png" alt="max_tempmap">
-            </a>
-            <a href="assets/wind_speed.png">
-                <img src="assets/wind_speed.png" alt="wind_speed_map"> 
-            </a> -->
-
-            <!-- <a class = "btn btn-link" href="assets/cloudiness.png">
-                <img src="assets/cloudiness.png" alt="cloudymap">
-            </a> -->
-
-            <!-- <button type="button" class="btn btn-outline-light btn-sm">
-                <a href="assets/cloudiness.png">
-                    <img src="assets/cloudiness.png" alt="cloudymap">
-                </a>
-            </button> -->
-            
-            
+          <div class="col-sm-4">
+            <h2>Visualizations</h2> 
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item">
                     <a href="assets/cloudiness.png">
-                        <img src="assets/cloudiness.png" alt="cloudymap">
+                        <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
                     </a>
                 </li>
                 <li class="list-group-item"> 
                     <a href="assets/humidity.png">
-                        <img src="assets/humidity.png" alt="humiditymap">
+                        <img src="assets/humidity.png" class="img-fluid" alt="humiditymap">
                     </a> 
                 </li>
               </ul>
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item">
                     <a href="assets/max_temp.png">
-                        <img src="assets/max_temp.png" alt="max_tempmap">
+                        <img src="assets/max_temp.png" class="img-fluid" alt="max_tempmap">
                     </a>
                 </li>
                 <li class="list-group-item"> 
                     <a href="assets/wind_speed.png">
-                        <img src="assets/wind_speed.png" alt="wind_speed_map"> 
+                        <img src="assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
                     </a>
                 </li>
               </ul>           
