--- a/Visualizations/humidity.html
+++ b/Visualizations/humidity.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Cloudiness</title>
+    <title>Humidity</title>
   </head>
 
   <body>
@@ -43,9 +43,9 @@
     <div class="container">
         <div class="row">
           <div class="col-sm-8">
-            <h1> Cloudiness</h1>
-            <img src="../assets/cloudiness.png" class='img-fluid' alt="cloudymap">
-              <p>
+            <h1>Humidity</h1>
+            <img src="../assets/humidity.png" class='img-fluid'  alt="humidmap">
+            <p>
                 Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
                 cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
                 the plots created, and explanations of trends and correlations observed.
