--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Latitude Home</a>
+        <a class="navbar-brand" href="https://ermcgrew.github.io/web_design_challenge/">Latitude Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,10 +31,10 @@
                 </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Comparison</a>
+              <a class="nav-link" href="https://ermcgrew.github.io/web_design_challenge/Resources/comparisons">Comparison</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Data</a>
+              <a class="nav-link" href="https://ermcgrew.github.io/web_design_challenge/Resources/data">Data</a>
             </li>
           </ul>
         </div>
