--- a/Resources/data.html
+++ b/Resources/data.html
@@ -25,7 +25,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">Max Temperature</a>
                   <a class="dropdown-item" href="#">Humidity</a>
-                  <a class="dropdown-item" href="#">Cloudiness</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">Cloudiness</a>
                   <a class="dropdown-item" href="#">Wind speed</a>
                 </div>
             </li>
