--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="#">Max Temperature</a>
                   <a class="dropdown-item" href="#">Humidity</a>
-                  <a class="dropdown-item" href="#">Cloudiness</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">Cloudiness</a>
                   <a class="dropdown-item" href="#">Wind speed</a>
                 </div>
             </li>
@@ -59,7 +59,7 @@
             <h2>Visualizations</h2> 
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item">
-                    <a href="assets/cloudiness.png">
+                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
                         <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
                     </a>
                 </li>
