--- a/Visualizations/cloudiness.html
+++ b/Visualizations/cloudiness.html
@@ -46,9 +46,10 @@
             <h1> Cloudiness</h1>
             <img src="../assets/cloudiness.png" class='img-fluid' alt="cloudymap">
               <p>
-                Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
-                cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
-                the plots created, and explanations of trends and correlations observed.
+                The latitude vs. cloudiness scatter plot shows the percent cloudiness for each city in the dataset, 
+                with the equator represented by x=0. There are no obvious trends related to the equator, however, 
+                it appears that many cities have cloudiness at extremes, with multiple points overlapping on
+                 y=0 and y=100.
             </p>
           </div>
           <div class="col-sm-4">
