--- a/Visualizations/humidity.html
+++ b/Visualizations/humidity.html
@@ -46,9 +46,8 @@
             <h1>Humidity</h1>
             <img src="../assets/humidity.png" class='img-fluid'  alt="humidmap">
             <p>
-                Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
-                cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
-                the plots created, and explanations of trends and correlations observed.
+              The city latitude vs. humidity plot shows the percent humidity for each city in the dataset. 
+              The equator is represented by x=0. The scatter plot does not show any obvious trends.
             </p>
           </div>
           <div class="col-sm-4">
