--- a/Visualizations/max_temp.html
+++ b/Visualizations/max_temp.html
@@ -46,9 +46,9 @@
             <h1> Maximum Temperature</h1>
             <img src="../assets/max_temp.png" class='img-fluid'  alt="max_temp_map">
             <p>
-                Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
-                cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
-                the plots created, and explanations of trends and correlations observed.
+              The Latitude vs. Max Temperature plot shows the maximum temperatures for each city in the dataset, 
+              with 0 on the x-axis being the equator. The y-values are highest nearest x=0. As the x-axis values 
+              move away from zero in either direction, the y-axis values trend lower.
             </p>
           </div>
           <div class="col-sm-4">
