--- a/Visualizations/wind_speed.html
+++ b/Visualizations/wind_speed.html
@@ -46,9 +46,9 @@
             <h1>Wind Speed</h1>
             <img src="../assets/wind_speed.png" class='img-fluid'  alt="wind_speed_map">
             <p>
-                Using pandas and matplotlib Python libraries, I plotted four weather variables against latitude: 
-                cloudiness, humidity, maximum temperature, and wind speed. This site provides the raw dataset, 
-                the plots created, and explanations of trends and correlations observed.
+              The latitude vs. wind speed scatter plot shows the wind speed for each city in the dataset, 
+              with the equator represented by x=0. Most wind speeds appear to be y=10 or below. 
+              Some of the higher y values might be outliers.
             </p>
           </div>
           <div class="col-sm-4">
