--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <li class="list-group-item">
                     <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
                         <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
+                                        cloudiness
                     </a>
                 </li>
                 <li class="list-group-item"> 
