all links added

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                   Visualizations
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Max Temperature</a>
-                  <a class="dropdown-item" href="#">Humidity</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">Max Temperature</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">Humidity</a>
                   <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">Cloudiness</a>
-                  <a class="dropdown-item" href="#">Wind speed</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">Wind speed</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -61,23 +61,22 @@
                 <li class="list-group-item">
                     <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
                         <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
-                                        cloudiness
                     </a>
                 </li>
                 <li class="list-group-item"> 
-                    <a href="assets/humidity.png">
+                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">
                         <img src="assets/humidity.png" class="img-fluid" alt="humiditymap">
                     </a> 
                 </li>
               </ul>
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item">
-                    <a href="assets/max_temp.png">
+                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">
                         <img src="assets/max_temp.png" class="img-fluid" alt="max_tempmap">
                     </a>
                 </li>
                 <li class="list-group-item"> 
-                    <a href="assets/wind_speed.png">
+                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">
                         <img src="assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
                     </a>
                 </li>
