--- a/Resources/data.html
+++ b/Resources/data.html
@@ -23,10 +23,10 @@
                   Visualizations
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Max Temperature</a>
-                  <a class="dropdown-item" href="#">Humidity</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">Max Temperature</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">Humidity</a>
                   <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">Cloudiness</a>
-                  <a class="dropdown-item" href="#">Wind speed</a>
+                  <a class="dropdown-item" href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">Wind speed</a>
                 </div>
             </li>
             <li class="nav-item">
