fixed up sidebar and comparison spacing

--- a/Resources/data.html
+++ b/Resources/data.html
@@ -44,7 +44,7 @@
           <div class="col-12-lg">  
             <h1>Data</h1>
             <p>
-              This table shows all the data used in this analysis.
+              All data used in this analysis is listed in the table below.
             </p>  
           <div class="table-responsive">
             <table class="table table-striped">
