--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="row">
-          <div class="col-sm-8">
+          <div class="col-md-8">
             <h1> Summary: Latitude vs. X</h1>
             <p>
                 The purpose of this project was to analyse weather trends based on a location's distance from the
@@ -55,30 +55,34 @@
                 the plots created, and explanations of trends and correlations observed.
             </p>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <h2>Visualizations</h2> 
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item">
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
-                        <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
-                    </a>
-                </li>
-                <li class="list-group-item"> 
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">
-                        <img src="assets/humidity.png" class="img-fluid" alt="humiditymap">
-                    </a> 
-                </li>
+              <li class="list-group-item p-0">
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Max Temp</p>
+                    <img src="assets/max_temp.png" class="img-fluid" alt="max_tempmap">
+                  </a>
+              </li>
+              <li class="list-group-item p-0"> 
+                <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html" class = 'text-decoration-none'>
+                  <p class="text-center m-0 text-body">Humidity</p>  
+                  <img src="assets/humidity.png" class="img-fluid" alt="humiditymap">
+                </a> 
+              </li>
               </ul>
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item">
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">
-                        <img src="assets/max_temp.png" class="img-fluid" alt="max_tempmap">
-                    </a>
+                <li class="list-group-item p-0">
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Cloudiness</p>      
+                    <img src="assets/cloudiness.png" class="img-fluid" alt="cloudymap">
+                  </a>
                 </li>
-                <li class="list-group-item"> 
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">
-                        <img src="assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
-                    </a>
+                <li class="list-group-item p-0">   
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Wind Speed</p>    
+                    <img src="assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
+                  </a>
                 </li>
               </ul>           
           </div>
