--- a/Resources/comparisons.html
+++ b/Resources/comparisons.html
@@ -41,35 +41,35 @@
       </nav>
 
     <div class="container">
-        <div class="row">
+        <div class="row mb-4">
           <div class="col-md-12">
             <h1>Comparison: Latitude vs. X</h1>
-            <p>Click any graph to go to it's detail page.</p>
+            <p>Click any graph to go to its detail page.</p>
             </div>
         </div>
-        <div class= 'row text-center'> 
-            <div class= 'col-sm-6'>
-                <h2>vs. Max Temperature</h2>
+        <div class= 'row text-center mb-5'> 
+            <div class= 'col-md-6'>
+                <h4>vs. Max Temperature</h4>
                 <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">
                     <img src="../assets/max_temp.png" class="img-fluid" alt="max_tempmap">
                 </a>
             </div>
-            <div class= 'col-sm-6'>
-                <h2>vs. Humidity</h2>
+            <div class= 'col-md-6'>
+                <h4>vs. Humidity</h4>
                 <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">
                     <img src="../assets/humidity.png" class="img-fluid" alt="humiditymap">
                 </a>
             </div>
         </div>
         <div class= 'row text-center'> 
-            <div class= 'col-sm-6'>
-                <h2>vs. Cloudiness</h2>
+            <div class= 'col-md-6'>
+                <h4>vs. Cloudiness</h4>
                 <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
                     <img src="../assets/cloudiness.png" class="img-fluid" alt="cloudymap">
                 </a>
             </div>
-            <div class= 'col-sm-6'>
-                <h2>vs. Wind Speed</h2>
+            <div class= 'col-md-6'>
+                <h4>vs. Wind Speed</h4>
                 <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">
                     <img src="../assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
                 </a>
