--- a/Visualizations/wind_speed.html
+++ b/Visualizations/wind_speed.html
@@ -54,29 +54,33 @@
           <div class="col-sm-4">
             <h2>Visualizations</h2> 
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item">
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html">
-                        <img src="../assets/cloudiness.png" class="img-fluid" alt="cloudymap">
-                    </a>
-                </li>
-                <li class="list-group-item"> 
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html">
-                        <img src="../assets/humidity.png" class="img-fluid" alt="humiditymap">
-                    </a> 
-                </li>
+              <li class="list-group-item p-0">
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Max Temp</p>
+                    <img src="../assets/max_temp.png" class="img-fluid" alt="max_tempmap">
+                  </a>
+              </li>
+              <li class="list-group-item p-0"> 
+                <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/humidity.html" class = 'text-decoration-none'>
+                  <p class="text-center m-0 text-body">Humidity</p>  
+                  <img src="../assets/humidity.png" class="img-fluid" alt="humiditymap">
+                </a> 
+              </li>
               </ul>
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item">
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/max_temp.html">
-                        <img src="../assets/max_temp.png" class="img-fluid" alt="max_tempmap">
-                    </a>
+                <li class="list-group-item p-0">
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/cloudiness.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Cloudiness</p>      
+                    <img src="../assets/cloudiness.png" class="img-fluid" alt="cloudymap">
+                  </a>
                 </li>
-                <li class="list-group-item"> 
-                    <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html">
-                        <img src="../assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
-                    </a>
+                <li class="list-group-item p-0">   
+                  <a href="https://ermcgrew.github.io/web_design_challenge/Visualizations/wind_speed.html" class = 'text-decoration-none'>
+                    <p class="text-center m-0 text-body">Wind Speed</p>    
+                    <img src="../assets/wind_speed.png" class="img-fluid" alt="wind_speed_map"> 
+                  </a>
                 </li>
-              </ul>           
+              </ul>            
           </div>
         </div>
       </div>
